--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
 
                 </div>
 
-                <img src="./images/cat.jpg" class="point-image" id="image7">
+                <img src="./images/caturday.jpg" class="point-image" id="image7">
                 <div id="caturday" class="point-container" >
                     
 
                     <img src="./images/circle.png" class="point"  onmouseover="showImage('image7')" onmouseout="hideImage('image7')" >
                     <div class="inner-point" id="point7">
                         <h3 class="date">2006</h3>
-                        <p class="pointInfo">LOLcats and caturday become very popular on the internet"</p>
+                        <p class="pointInfo">LOLcats and caturday become very popular on the internet</p>
                        
                     </div>
 
